[package]
name = "web_basic_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
spider = { git = "https://github.com/spider-rs/spider", branch = "main", features = ["sync", "chrome", "cache_request"] }
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13"
http-cache-reqwest = { version = "0.15.1", features = ["manager-cacache"] }
